# mukt

./: Makefile.am  Makefile.in  README.md  configure  configure.ac
autom4te.cache/: output.0  output.1  output.3  requests  traces.0  traces.1  traces.2  traces.3
core/: Makefile.am  Makefile.in  core.c
docs/: DesignDocument
include/: config.h  mukt.h
include/core/: mukt-core.h
include/plugins/: mukt-plugins.h
plugins/: Makefile.in  plugins.c
